@@ -116,9 +116,18 @@
 (defvar parse-time-months '(("jan" . 1) ("feb" . 2) ("mar" . 3)
 			    ("apr" . 4) ("may" . 5) ("jun" . 6)
 			    ("jul" . 7) ("aug" . 8) ("sep" . 9)
-			    ("oct" . 10) ("nov" . 11) ("dec" . 12)))
+			    ("oct" . 10) ("nov" . 11) ("dec" . 12)
+			    ("january" . 1) ("february" . 2)
+			    ("march" . 3) ("april" . 4) ("june" . 6)
+			    ("july" . 7) ("august" . 8)
+			    ("september" . 9) ("october" . 10)
+			    ("november" . 11) ("december" . 12)))
 (defvar parse-time-weekdays '(("sun" . 0) ("mon" . 1) ("tue" . 2)
-			      ("wed" . 3) ("thu" . 4) ("fri" . 5) ("sat" . 6)))
+			      ("wed" . 3) ("thu" . 4) ("fri" . 5)
+			      ("sat" . 6) ("sunday" . 0) ("monday" . 1)
+			      ("tuesday" . 2) ("wednesday" . 3)
+			      ("thursday" . 4) ("friday" . 5)
+			      ("saturday" . 6)))
 (defvar parse-time-zoneinfo `(("z" 0) ("ut" 0) ("gmt" 0)
 			      ("pst" ,(* -8 3600)) ("pdt" ,(* -7 3600) t)
 			      ("mst" ,(* -7 3600)) ("mdt" ,(* -6 3600) t)
