@@ -348,7 +348,7 @@
 	the last successful check; this was seen as a cleaner approach
 	than returning a cell like '(spam spam-use-bogofilter).
 	(spam-list-of-checks): Documentation appended.
-	(spam-split): Accomodate the spam-split-symbolic-return and
+	(spam-split): Accommodate the spam-split-symbolic-return and
 	spam-split-symbolic-return-positive variables.
 	(spam-find-spam): New function called when the summary is built.
 	(spam-log-registered-p): Checks if a ham or spam registration has
@@ -1527,7 +1527,7 @@
 	data.
 	(gnus-registry-minimum-subject-length): Minimum subject length
 	before it's considered when tracing subjects.
-	(gnus-registry-save): Accomodate extra data entry caching.
+	(gnus-registry-save): Accommodate extra data entry caching.
 	(gnus-registry-action): Change function name, add the subject and
 	pass it to gnus-registry-add-group.
 	(gnus-registry-spool-action): Change function name, add the
@@ -7168,7 +7168,7 @@
 	(gnus-agent-read-agentview): New function, used by
 	gnus-agent-load-alist.
 	(gnus-agent-load-fetched-headers): Remove.
-	(gnus-agent-save-alist): Rewrite to accomodate new format.
+	(gnus-agent-save-alist): Rewrite to accommodate new format.
 	(gnus-agent-fetch-group-1): Make sure list of articles is in the
 	same order as in gnus-newsgroup-headers.
 	(gnus-agent-expire): Document and implement extra args ARTICLES,
