@@ -2,6 +2,10 @@
 
 	* message.el (message-disassociate-draft): Revert 2008-03-18 change.
 
+2008-06-03  Glenn Morris  <rgm@gnu.org>
+
+       * pop3.el (nnheader-accept-process-output): Autoload it.
+
 2008-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* rfc2231.el (rfc2231-decode-encoded-string): Don't decode things that
@@ -14,6 +18,11 @@
 	(message-bogus-addresses): Rename from message-bogus-address-regexp.
 	Improve custom options.
 	(message-bogus-recipient-p): Adjust accordingly.
+
+2008-05-27  Chong Yidong  <cyd@stupidchicken.com>
+
+	* parse-time.el (parse-time-months, parse-time-weekdays): Add
+	long-form month and day names.
 
 2008-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
